--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanstack-start-example-basic",
+  "name": "dev-note",
   "private": true,
   "sideEffects": false,
   "type": "module",
