--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
+    "dev": "vinxi dev --port 5000",
     "build": "vinxi build",
     "start": "vinxi start"
   },
@@ -33,6 +33,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tencentcloud-sdk-nodejs-lighthouse": "^4.1.21",
+    "unenv": "^1.10.0",
     "vinxi": "0.5.3"
   },
   "devDependencies": {
