--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "wrangler pages deploy ./dist"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@clerk/tanstack-react-start": "^0.14.2",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-collapsible": "^1.1.8",
@@ -26,6 +27,7 @@
     "@tanstack/react-start": "^1.116.1",
     "@tanstack/start": "^1.116.1",
     "ahooks": "^3.9.6",
+    "antd": "^5.28.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.488.0",
@@ -40,6 +42,7 @@
     "vinxi": "0.5.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.2",
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
